--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
           ${{ runner.os }}-node-
     
     # 安装依赖
-    run: npm ci
+    run: npm install
 
     # 打包构建
     - run: npm run build
